tests/snapshots/run_wpt_conformance__litert_reduceL2_float16_3D_tensor_options_keepDimensions_false.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_l2.https.any.js reduceL2 float16 3D tensor options.keepDimensions=false, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: ReduceL2 { input: 0, options: Some(MLReduceOptions { label: "", axes: None, keep_dimensions: false }), outputs: [1] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceL2Input: f16[2, 3, 4];
  }

  nodes {
    [reduceL2Output] = reduceL2(reduceL2Input, axes=null, keepDimensions=false, label="");
  }

  outputs { reduceL2Output; }
}
